# shule-ai

./: AGENTS.md  README.md  app.py  llm_router.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
shule_ai/: __init__.py  subjects.py  tutor.py
tests/: test_smoke.py
