[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shule-ai"
version = "0.1.0"
description = "AI tutor for Kenya KCPE/KCSE curriculum"
license = "CC-BY-NC-ND-4.0"
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
requires-python = ">=3.10"
dependencies = ["anthropic>=0.28.0", "python-dotenv>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shule_ai*"]
